--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </div>
 
 
-    <script src="jogo-da-memoria.js"></script>
+    <script src="assets/jogo-da-memoria.js"></script>
 </body>
 
 </html>
