--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="container">
         <div class="head">
             <h1>Jogo da Memória</h1>
-            <p>Pares: <span id="score"></span></p>
+            <p>Cartas: <span id="score"></span></p>
             <p>Tempo: <span id="tempo"></span></p>
             <button id="resetButton">Iniciar</button>
         </div>
