--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <div class="container">
         <div class="head">
             <h1>Jogo da Memória</h1>
-            <p>Cartas: <span id="score"></span></p>
+            <p>Cartas: <span id="cartas"></span></p>
             <p>Tempo: <span id="tempo"></span></p>
-            <button id="resetButton">Iniciar</button>
+            <button id="resetButton">Jogar</button>
         </div>
         <div id="board"></div>
     </div>
