--- a/game.html
+++ b/game.html
@@ -35,6 +35,8 @@
     <div id="board"></div>
   </div>
 
+  <button class="sair" onclick="window.location.href = '#'">&larr;<i>Sair da sala</i></button>
+
   <!-- Modal de Vitória -->
   <!-- <div id="modal-vitoria" class="modal">
     <div class="modal-content vitoria">
